added login form to Home page, added placeholder for welcome text on Home page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+.welcome-container {
+  background-color: aqua; 
+  border-radius: 20px;
+}
+
+.form-container{
+  width: 400px !important;
+}
+
+.form-paragraph{
+  display: inline-block;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
