--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.search-result-image{
+  height: 460px;
+  width: 400px;
+}
+
 .welcome-container {
   background-color: aqua; 
   border-radius: 20px;
