--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,3 @@
-html{
-  
-  background-color: whitesmoke;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke !important;
 }
 
 code {
