--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,8 +8,13 @@
 }
 
 .welcome-container {
-  background-color: aqua; 
+  /* background-color: white;  */
   border-radius: 20px;
+  margin-top: 20px;
+}
+
+.welcome-container p {
+  font-size: 1.5rem;
 }
 
 .form-container{
